# Parchis

./: .clang-format  .gitignore  CMakeLists.txt
include/: dices.hpp  game.hpp  player.hpp  table.hpp
src/: game.cpp  main.cpp  player.cpp  table.cpp
test/: CMakeLists.txt  test_game.cpp  test_player.cpp  test_table.cpp
